data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1543.wast
;; 4. **Test Description**: A complex scenario where a loop has alternating true and false conditions for `br_if` that should exit on the first true evaluation. Validate different interpretations of condition evaluations.    - **Constraint Checked**: Conditional operand evaluation.    - **Relation to Infinite Loops**: Misinterpretation of the condition will prevent exiting the loop when true, running infinitely.

(assert_invalid
  (module
    (func $alternating-loop
      (loop $loop
        (i32.const 1) (br_if 0)
        (i32.const 0) (br_if 0)
        (i32.const 1) (br_if 0)
        (i32.const 1) (br_if 0 (i32.const 1)) ;; intentional extra operand to cause error
      )
    )
  )
  "type mismatch"
)